# figpptx

./: 404.html  LICENSE  MANIFEST.in  README.md  concepts.pptx  gallery.py  index.html  mkdocs.yml  requirements.txt  scratch.py  script.py  setup.cfg  setup.py  sitemap.xml  tox.ini  transcribe.pu
concept/: index.html
concept/static/: concepts.pptx
devs/: README.txt  dev_requirements.txt
devs/mycommand/: README.md  __init__.py  formatter.py  space_remover.py
docs/: index.md
docs/concept/: index.md
docs/tutorial/: advance.md  basic.md  converter.md  index.md  separator.md
figpptx/: __init__.py  arguments_solver.py  artist_misc.py  comparer.py  constants.py  conversion_misc.py  converter_manager.py  image_misc.py  pptx_misc.py  pptx_transcriber.py  renderers.py  separator.py  slide_editor.py  win32com_misc.py
figpptx/converters/: __init__.py  fancybox.py  line2d.py  text.py
figpptx/separators/: __init__.py  default_separator.py
gallery/: axis_off.py  draw_text.py  fancybbox.py  line2d.py  patches.py  pcolor_mesh.py
search/: search_index.json
tests/: test_converter_manager.py  test_image_misc.py  test_pptx_misc.py  test_rasterize.py  test_send.py  test_slide_editor.py  test_transcibe.py
tutorial/: _s.py  _script.py  flake8.txt  index.html  tutorial_converter.py  tutorial_separator.py
tutorial/advance/: index.html
tutorial/basic/: index.html
tutorial/converter/: index.html
tutorial/separator/: index.html
tutorial/structure/: index.html
