[metadata]
name = figpptx
version = 0.0.1
description = Matplotlib to Powerpoint
long_description = file: README.md
license = BSD 3-Clause License

[aliases]
test=pytest

[tool:pytest]
addopts =  --cov figpptx --cov-report html

[flake8]
max-line-length = 80
select = C,E,F,W,B,B950
ignore = E203, E501, W503
output-file = flake8.txt
tee = true

[format]
root = figpptx 
